# nkipy

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  COMMIT_MSG.txt  Config  Makefile  OPTIMIZATION_RESULTS.md  README.md  SCALABILITY_TEST_QWEN3.md  SCALABILITY_TEST_TINYLLAMA.md  TEST_RESULTS.md  chat.py  chat.sh  collective.py  config.py  convert_torch_numpy_dtype.py  how_to_optimize.md  how_to_test.md  how_to_think.md  logger.py  model.py  parallel_state.py  prefill_layer.py  pyproject.toml  reference.json  reference.py  requirements.txt  run_vllm_serve.sh  setup.py  setup.sh  trn2_porting_notes.md  utils.py
experimental/spiky/spiky/: CMakeLists.txt  pyproject.toml
experimental/spiky/spiky-torch/: CMakeLists.txt  pyproject.toml
experimental/spiky/spiky-torch/tests/: __init__.py  conftest.py  test_allocator.py  test_copy.py  test_device.py  test_integration.py  test_parity.py  (+4 more)
nkigen/: .gitignore  CLAUDE.md  README.md  pyproject.toml  pytest.ini  setup.py
nkigen-lite/: KERNEL_BUILDER_UPGRADE.md  PERFORMANCE.md  README.md  REVIEW_basic_lowering.md  SBUF_FUSION_PLAN.md  STATUS.md  TILE_SCHEDULE_PLAN.md  pyproject.toml
nkigen-lite/docs/: floor_divide_precision.md  scatter-family-design.md  slice-as-view.md  transpose-lowering-perf.md
nkigen-lite/src/nkigen_lite/: core.py
nkigen-lite/tests/: conftest.py  spike_floor_divide_bug.py
nkigen-lite/tests/nki_ir/: conftest.py  test_examples.py
nkigen-lite/tests/tensor_ir/: test_canonicalize.py  test_direct_lower.py  test_direct_lower_alloc.py  test_direct_lower_broadcast.py  test_direct_lower_elementwise.py  test_direct_lower_matmul.py  test_direct_lower_memory.py  test_direct_lower_reduce.py  test_direct_lower_schedule.py  test_direct_lower_transpose.py  test_fold_broadcast.py  test_fold_transpose.py  test_gather.py  test_layout_solver.py  test_lower_to_nki.py  test_lowering_issues.py  test_missing_ops.py  test_notebook_patterns.py  test_pattern_lowering.py  test_scatter.py  test_shape_coverage.py  test_tensor_ir.py
nkigen/examples/: 01_basic_usage.py  02_verify_execution.py  03_knobs.py  04_transform.py  06_trace_loops.py  07_full_pipeline.py  08_tiled_add.py
nkigen/examples/tiling/: 01_basic_tiling.py  02_traced_tiling.py
nkigen/mlir/include/: CMakeLists.txt
nkigen/nkigen/: __init__.py  builder.py  compile.py  control_flow.py  execution.py  knob.py  llvm.py  mlir_utils.py  op_vtable.py  pass_manager.py  trace.py  traced_array.py
nkigen/nkigen/transforms/: __init__.py  linalg_to_nisa_py.py  nkipy_opt.py
nkigen/scripts/: setup_nki.sh  update_nki.sh
nkigen/tests/: README.md  conftest.py  harness.py
nkigen/tests/e2e/: conftest.py  test_3d_elementwise.py  test_attention.py  test_auto_layout.py  test_custom_op.py  test_feedforward.py  test_head_deconcat.py  test_matmul_add.py  test_multi_output.py  test_partition_dim.py  test_qwen3_layer.py  test_reduce.py  test_rmsnorm.py  test_rope.py  test_sigmoid.py
nkigen/tests/passes/: conftest.py  pass_utils.py
nkigen/tests/unit/: conftest.py  test_broadcast_ops.py  test_custom_op.py  test_elementwise_ops.py  test_execution_engine.py  test_for_loops.py  test_gather_ops.py  test_import_compatibility.py  test_matrix_ops.py  test_reduction_ops.py
nkipy/: MANIFEST.in  pyproject.toml  setup.py
nkipy/src/nkipy/: __init__.py
relay/: README.md  pyproject.toml
relay/src/: Makefile  common.h  endpoint_wrapper.h  engine.cc  engine.h  engine_pybind.cc  nrt_dmabuf_shim.c  slurm-17319.out
relay/src/include/: define.h  epoll_client.h  epoll_server.h  memory_allocator.h  net.h  nrt_tensor.h  rdma_channel.h  rdma_channel_group.h  rdma_channel_impl.h  rdma_context.h  rdma_ctrl_channel.h  rdma_device.h  rdma_endpoint.h  seq_num.h  util.h
relay/src/relay/: __init__.py  endpoint.py  nixl_endpoint.py  nixl_transfer.py  nrt_dmabuf_fix.py  staging.py  transfer.py
relay/tests/: Makefile  bench_multi_ep.py  bench_multi_proc.py  bench_nixl_write.py  bench_nrt_sendrecv.py  benchmark_multi_ep_p2p.py  benchmark_relay_write_neuron.py  test_nixl_multi_buffer.py  test_nixl_transfer.py  test_rmda_endpoint.cpp  test_rmda_endpoint_neuron.cpp
spike/: ASYNC_API.md  CMakeLists.txt  README.md  pyproject.toml
spike/src/: .clang-tidy  debug_handler.cpp  model.cpp  nrt_wrapper.cpp  python_bindings.cpp  spike.cpp  sys_trace.cpp  tensor.cpp  tensor_set.cpp
spike/src/include/: debug_handler.h  dtype.h  error.h  float_converter.h  model.h  nrt_wrapper.h  spike.h  sys_trace.h  tensor.h  tensor_format.h  tensor_set.h
spike/src/spike/: __init__.py  _spike.pyi  cli.py  logger.py  profiler_adapter.py  spike_async.py  spike_model.py  spike_singleton.py  spike_tensor.py
spike/tests/: conftest.py  test_spike_async.py  test_spike_core_api.py
spike/tests/artifacts/: matmul_large.neff  matmul_small.neff
torch-to-nkipy/: README.md  pyproject.toml  setup.py
torch-to-nkipy/examples/basics/: README.md  example_basic.py  example_dist.py  example_hybrid_exe.py  example_nki_op.py  example_training.py
torch-to-nkipy/examples/hf_qwen/: README.md  args.py  example_qwen_0.6b.sh  example_qwen_4b_tp2.sh  example_qwen_8b_tp8.sh  generation.py  hf_distributed_utils.py  hf_utils.py  inference_distributed.py  inference_single.py  model_config.py
torch-to-nkipy/src/torch_to_nkipy/: __init__.py
torch-to-nkipy/tests/: README.md  conftest.py  test_backend.py  test_distributed.py  test_integration.py  test_runtime.py  test_runtime_backend.py  test_training.py
torch-to-nkipy/tests/ops/: test_nki.py
vllm-nkipy/: .gitignore  README.md  pyproject.toml
vllm-nkipy/examples/: README.md  llama_70b_example.py  offline_inference_neuron.py
vllm-nkipy/examples/gpt_oss/: serve_tp.sh  serve_tp_dp.sh
vllm-nkipy/vllm_nkipy/: __init__.py  compile.py  config.py  envs.py  platform.py  utils.py
vllm-nkipy/vllm_nkipy/distributed/: __init__.py  nkipy_communicator.py  parallel_state.py
vllm-nkipy/vllm_nkipy/ops/: __init__.py  activation.py  distributed.py  rotary_embedding.py
vllm-nkipy/vllm_nkipy/sample/: metadata.py  ops.py  sampler.py
vllm-nkipy/vllm_nkipy/worker/: nkipy_model_runner.py  nkipy_worker.py
(+940 files in other folders)
