[build-system]
requires = ["setuptools", "wheel", "cmake", "pybind11>=2.8.0", "nanobind>=2.4"]
build-backend = "setuptools.build_meta"

[project]
name = "nkigen"
version = "0.1.0"
description = "Lowering from NumPy traces to NKI's NISA dialect for AWS Neuron hardware"
requires-python = ">=3.10"
authors = [{ name = "NKIgen Team" }]
dependencies = [
    "numpy>=1.26",
    "neuronx-cc>=0.0,!=1.*,<3.0",
    "nki>=0.1.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0", "PyYAML>=6.0"]

[tool.setuptools.packages.find]
include = ["nkigen*"]

[tool.setuptools.package-data]
"nkigen._mlir" = ["**/*.so", "**/*.py"]

[tool.uv.sources]
neuronx-cc = { index = "neuron" }
nki = { index = "neuron" }
