[build-system]
requires = ["setuptools>=42", "wheel", "grpcio-tools>=1.48.0", "build"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "nkipy"
version = "0.1.0"
description = "A lightweight Pythonic kernel environment for AWS Neuron"
requires-python = ">=3.10"
authors = [{ name = "NKIPy Team (Ziyang Xu et al.)" }]
dependencies = ["numpy>=1.26", "neuronx-cc>=0.0,!=1.*,<3.0", "nki>=0.1.0"]

[tool.uv.sources]
neuronx-cc = { index = "neuron" }
nki = { index = "neuron" }

[tool.coverage.run]
source = ["nkipy"]
