[build-system]
requires = ["setuptools>=42", "wheel", "pybind11>=2.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "relay"
version = "0.0.1.post4"
description = "RDMA-based P2P communication for Trainium weight transfer"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
authors = [{ name = "UCCL Team" }]
dependencies = ["pybind11>=2.6.0", "paramiko", "intervaltree", "numpy", "requests", "torch"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

