[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "relay"
version = "0.1.9"
description = "NIXL-based P2P RDMA weight transfer for Trainium"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "NKIPy Team" }]
dependencies = ["numpy", "requests", "torch", "torch-neuronx"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
