[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=2.11", "torch>=2.8"]
build-backend = "scikit_build_core.build"

[project]
name = "spiky-torch"
version = "0.1.0"
description = "Optional PyTorch PrivateUse1 integration for spiky (torch.device('nkipy'))"
readme = "../README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.8",
  "spiky>=0.1.0",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.scikit-build]
cmake.source-dir = "."
wheel.packages = ["src/spiky"]
build-dir = "build"
