[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=2.11"]
build-backend = "scikit_build_core.build"

[project]
name = "spiky"
version = "0.1.0"
description = "Experimental runtime for AWS Neuron (Spiky)"
readme = "../README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.20.0"]

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.scikit-build]
cmake.source-dir = "."
wheel.packages = ["src/spiky"]
build-dir = "build"
